templates/eks-secure-enterprise-api-builder/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-api
  labels:
    app.kubernetes.io/managed-by: coder
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
