templates/eks-secure-enterprise-api-builder/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-api
  namespace: secure-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: secure-api.internal.example.mil
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secure-api
                port:
                  number: 80
